<resources>
    <string name="app_name">MoneyFlow</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type">ประเภท</string>
    <string name="list">รายการ</string>
    <string name="amount">จำนวนเงิน</string>
    <string name="income">รายรับ</string>
    <string name="outcome">รายจ่าย</string>
    <string name="add">เพิ่ม</string>
    <string name="delete">delete</string>
</resources>
